--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Users
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,16 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Users</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list>
+    <ion-item *ngFor="let user of (users | async)" [routerLink]=[user._id]>
+      <ion-label>
+        <h2><strong>{{ user.firstName + ' ' + user.lastName }}</strong></h2>
+      </ion-label>
+      <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
